crates/lyra-tests/tests/snapshots/corpus__lrm__26__26.3__referencing_data__enum_literal_import_negative.snap
---
source: crates/lyra-tests/tests/corpus.rs
expression: ws.dump_diagnostics()
---
// file: main.sv (3 diagnostics)
  error[lyra.semantic.unresolved_name] 5:12..5:12: unresolved name `ORIGINAL`
  error[lyra.semantic.ambiguous_import] 13:12..13:12: name `FALSE` is ambiguous: imported from packages `p`, `q`
  error[lyra.semantic.import_conflict] 21:8..21:8: local declaration of `FALSE` conflicts with wildcard import from package `p`
// file: pkg.sv (0 diagnostics)
---
unit (0 diagnostics)
