crates/lyra-tests/tests/snapshots/corpus__lrm__26__26.3__referencing_data__explicit_import.snap
---
source: crates/lyra-tests/tests/corpus.rs
expression: ws.dump_diagnostics()
---
// file: main.sv (1 diagnostic)
  error[lyra.semantic.member_not_found] 21:8..21:8: member `nonexistent` not found in package `P`
---
unit (0 diagnostics)
