crates/lyra-tests/tests/snapshots/corpus__lrm__26__26.3__referencing_data__explicit_import_positional.snap
---
source: crates/lyra-tests/tests/corpus.rs
expression: ws.dump_diagnostics()
---
// file: main.sv (1 diagnostic)
  error[lyra.semantic.unresolved_name] 6:10..6:10: unresolved name `c`
---
unit (0 diagnostics)
