crates/lyra-tests/tests/snapshots/corpus__lrm__26__26.3__referencing_data__mixed_import_positional.snap
---
source: crates/lyra-tests/tests/corpus.rs
expression: ws.dump_diagnostics()
---
// file: main.sv (1 diagnostic)
  error[lyra.semantic.import_conflict] 12:8..12:8: import of `x` from package `q` conflicts with wildcard import from package `p`
---
unit (0 diagnostics)
