crates/lyra-tests/tests/snapshots/corpus__lrm__26__26.3__referencing_data__positional_beats_precedence.snap
---
source: crates/lyra-tests/tests/corpus.rs
expression: ws.dump_diagnostics()
---
// file: main.sv (2 diagnostics)
  error[lyra.semantic.unresolved_name] 10:9..10:9: unresolved name `x`
  error[lyra.semantic.import_conflict] 12:8..12:8: import of `x` from package `q` conflicts with wildcard import from package `p`
---
unit (0 diagnostics)
