crates/lyra-tests/tests/snapshots/corpus__lrm__26__26.3__referencing_data__wildcard_local_conflict.snap
---
source: crates/lyra-tests/tests/corpus.rs
expression: ws.dump_diagnostics()
---
// file: main.sv (1 diagnostic)
  error[lyra.semantic.import_conflict] 8:6..8:6: local declaration of `x` conflicts with wildcard import from package `p`
---
unit (0 diagnostics)
