crates/lyra-tests/tests/snapshots/corpus__lrm__26__26.3__referencing_data__wildcard_local_two_later_decls.snap
---
source: crates/lyra-tests/tests/corpus.rs
expression: ws.dump_diagnostics()
---
// file: main.sv (3 diagnostics)
  error[lyra.semantic.import_conflict] 8:6..8:6: local declaration of `x` conflicts with wildcard import from package `p`
  error[lyra.semantic.duplicate_definition] 10:7..10:7: duplicate definition of `x`
  error[lyra.semantic.import_conflict] 10:7..10:7: local declaration of `x` conflicts with wildcard import from package `p`
---
unit (0 diagnostics)
