crates/lyra-tests/tests/snapshots/corpus__lrm__26__26.3__referencing_data__wildcard_positional_scoping.snap
---
source: crates/lyra-tests/tests/corpus.rs
expression: ws.dump_diagnostics()
---
// file: main.sv (1 diagnostic)
  error[lyra.semantic.unresolved_name] 7:9..7:9: unresolved name `val`
---
unit (0 diagnostics)
